--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-csv-reader": "^3.5.0",
     "react-dom": "^18.2.0",
+    "react-json-to-csv": "^1.0.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
