--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-json-to-csv": "^1.0.0"
   }
 }
