--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^2.9.7",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@redux-saga/core": "^1.1.3",
@@ -22,6 +23,7 @@
     "formik-mui": "^5.0.0-alpha.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-json-to-csv": "^1.0.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
