--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
     "notistack": "^2.0.5",
